# mcmf_data_collector_public

./: .gitignore  README.md  install.sh  main.py  notebook.ipynb  pyproject.toml
.streamlit/: config.toml
assets/: info.json
assets/configuration/: db_sheet.json
assets/credentials/: google_sheet_db__datacollector_template.json
assets/custom_components/footer/: element.html  script.js  style.css
assets/data/: parishes.json
data_collection/: __init__.py  paths.py  utils.py
data_collection/config/: __init__.py
data_collection/data_processor/: __init__.py  date_related.py  validation.py
data_collection/gcp_processor/: cred.py  sheets.py
data_collection/web_processor/: __init__.py  app.py
data_collection/web_processor/common/: __init__.py  footer.py  header.py
pages/: dummy.py
